--- a/src/template.yaml
+++ b/src/template.yaml
@@ -4,7 +4,7 @@ OSSDemoComponent:
   Access: edas_beta_test
   Properties:
     Region: 'cn-hangzhou'
-    Bucket: MybucketName
+    Bucket: baiji-oss-test
     #    CodeUri: 本地路径
     CodeUri:
       Src: 本地路径
@@ -18,6 +18,7 @@ OSSDemoComponent:
       - Key: aa
         Vaule: bbb
     StorageClass: standard
+    DataRedundancyType: LRS
     Cors:
       - AllowedOrigin:
           - http://www.a.com
