--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@serverless-tool/oss",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "通过本组件，您可以简单快速使用阿里云OSS",
-  "main": "index.js",
+  "main": "./src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "publish": "npm install --production"
   },
   "repository": {
     "type": "git",
