--- a/publish.yaml
+++ b/publish.yaml
@@ -1,8 +1,8 @@
 Type: Component
 Name: oss
 Provider:
-  - Alibaba
-Version: 0.0.3
+  - 阿里云
+Version: 0.0.4
 Description: 阿里云对象存储组件
 HomePage: https://www.aliyun.com/
 Tags:
